--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ html,body{
     background-color: #000510;
     padding-left: 5vw;
     padding-right: 5vw;
-    /* overflow: hidden; */
+    scroll-behavior: smooth;
 }
+
+
+
 header{
     width: 80%;
     position: fixed;
@@ -23,16 +26,17 @@ header{
 header nav{
     width: 100%;
     display: flex;
+    height: 70px;
     text-align: center;
     text-transform: uppercase;
     display: flex;
     justify-content: space-between;
     align-items: center;
    
-    /* background-color: white; */
+    /* background-color: blueviolet; */
 }
 header .name-box1 .myname{
-    color: white;
+    color: #CCD6F6;
     cursor: pointer;
     font-weight: 300;
 }
@@ -41,29 +45,30 @@ header ul{
     justify-content: center;
     align-items: center;
     gap: 20px;
-}
-header ul li{
     list-style: none;
+}
+header ul li a{
+    text-decoration: none;
     font-size: 20px;
-    color: aliceblue;
+    color: #CCD6F6;
     padding: 20px;
     font-weight: 200;
     cursor: pointer;
 }
-header  ul li:hover{
+header  ul li a:hover{
     color: #4FCBB0;
 }
-header  ul li::after{
+header  ul li a::after{
     content: "";
     width: 0%;
     height: 3%;
     position: absolute;
     background-color: #4FCBB0;
-    bottom: 15px;
+    bottom: 1px;
     left: 0;
     transition: all 0.4s;
 }
-header  ul li:hover::after{
+header  ul li a:hover::after{
     width: 100%;
 }
 header  ul #icon{
@@ -78,14 +83,15 @@ main{
 }
 main .main-box{
     width: 100%;
-    height: 500px;
-    border-radius: 15px;
+    height: 550px;
+    /* border-radius: 15px; */
     margin-top: 200px;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 100px;
     display: flex;
     overflow: hidden;
+    border-bottom: 1px solid #CCD6F6;
     /* background-color: #4FCBB0; */
 }
 main .main-box .allInfo{
@@ -178,29 +184,408 @@ main .main-box .img-box img:hover{
     transform: scale(1);
 }
 main #section1{
- width: 100%;
- height: 400px;
- /* background-color: beige; */
- padding-left: 100px;
+    width: 100%;
+    height: 650px;
+    /* background-color: #006AE8; */
+    border-bottom: 1px solid #CCD6F6;
 }
 main #section1 h2{
     color: #4FCBB0;
     position: relative;
     font-size: 30px;
+    text-align: center;
+    margin-top: 20px;
 }
-main #section1 h2::after{
-    content: "";
-    align-self: center;
-    background-color: #233554;
-    content: "";
-    display: block;
-    height: 1px;
-    margin-left: 20px;
+main #section1 .edu{
+    width: 100%;
+    height: 500px;
+    /* background-color: #233554; */
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    align-items: center;
+}
+main #section1 .edu .ug{
+    width: 550px;
+    /* height: 300px; */
+    padding: 10px;
+    border-radius: 12px;
+    border: 1px solid #4FCBB0;
+    /* display: flex; */
+    /* background-color: #1D2532; */
+    flex-wrap: wrap;
+}
+main #section1 .edu .ug figure{
+    width: 60px;
+    margin-right: 10px;
+}
+main #section1 .edu .ug figure img{
+    width: 100%;
+}
+main #section1 .edu .ug .deg1{
+    font-size: 17px;
+    color: #fff;
+    margin-right: 7px;
+    height: 30px;
+}
+
+main #section1 .edu .ug .col1{
+    color: #CCD6F6;
+}
+main #section1 .edu .ug .loc1{
+    color: #fff;
+}
+main #section1 .edu .ug .year1{
+    /* font-size: 15px; */
+    color: #CCD6F6;
+}
+main #section1 .edu .ug .points{
+    width: 100%;
+    /* height: 50px; */
+    margin-top: 10px;
+    /* background-color: #fff; */
+    padding: 15px;
+}
+main #section1 .edu .ug .points li{
+    color: #CCD6F6;
+    font-size: 15px;
+}
+
+main #section1 .edu .pg{
+    width: 550px;
+    /* height: 300px; */
+    padding: 10px;
+    border-radius: 12px;
+    border: 1px solid #4FCBB0;
+    /* display: flex; */
+    /* background-color: #1D2532; */
+    flex-wrap: wrap;
+}
+
+main #section1 .edu .pg figure{
+    width: 75px;
+    margin-right: 10px;
+}
+
+main #section1 .edu .pg figure img{
+    width: 100%;
+}
+
+main #section1 .edu .pg .deg2{
+    font-size: 20px;
+    color: #fff;
+    margin-right: 7px;
+    height: 30px;
+}
+
+
+main #section1 .edu .pg .col2{
+    color: #CCD6F6;
+}
+
+main #section1 .edu .pg .loc2{
+    color: #fff;
+}
+main #section1 .edu .pg .year2{
+    font-size: 15px;
+    color: #CCD6F6;
+}
+
+main #section1 .edu .pg .points{
+    width: 100%;
+    /* height: 50px; */
+    margin-top: 10px;
+    /* background-color: #fff; */
+    padding: 15px;
+}
+main #section1 .edu .pg .points li{
+    color: #CCD6F6;
+   font-size: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+main #section2{
+    width: 100%;
+    height: 400px;
+    /* background-color: antiquewhite; */
+    padding-left: 100px;
+    border-bottom: 1px solid #CCD6F6;
+}
+
+main #section2 h2{
+    color: #4FCBB0;
+    margin-top: 20px;
     position: relative;
-    top: -12px;
-    right: -300px;
-    width: 60%;
+    font-size: 30px;
+    text-align: center;
 }
+main #section2 .allimg{
+    width: 100%;
+    height: 100%;
+    /* height: 300px; */
+    /* margin-top: 30px; */
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    /* background-color: #006AE8; */
+}
+main #section2 figure{
+    height: 100%;
+    display: flex;
+    gap: 20px;
+}
+main #section2 figure img{
+    /* width: 100%; */
+    height:22%;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 20px;
+    transition: 0.5s ease;
+}
+main #section2 figure img:hover{
+   transform: scale(1.1);
+}
+
+
+
+
+
+
+
+
+main #section3{
+ width: 100%;
+ height: 700px;
+ padding-left: 100px;
+ border-bottom: 1px solid #CCD6F6;
+}
+main #section3 h2{
+    color: #4FCBB0;
+    position: relative;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+main #section3 .allprojects{
+    width: 100%;
+    height: 100%;
+    /* background-color: #0276FF; */
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: #0276FF;
+}
+main #section3 .allprojects .box-1{
+    width: 100%;
+    height: 100px;
+    border: 1px solid #4FCBB0;
+    overflow: hidden;
+    transition: 0.3s ease;
+}
+
+
+
+  
+main #section3 .allprojects .box-2{
+    width: 100%;
+    height: 100px;
+    border: 1px solid #4FCBB0;
+    overflow: hidden;
+    transition: 0.3s ease;
+}
+
+
+main #section3 .allprojects .box-3{
+    width: 100%;
+    height: 100px;
+    border: 1px solid #4FCBB0;
+    overflow: hidden;
+    transition: 0.3s ease;
+}
+main #section3 .allprojects .flow{
+    display: flex;
+    font-size: 25px;
+    justify-content: space-between;
+    align-items: center;
+    border-left: none;
+    border-right: none;
+    overflow: hidden;
+    position: relative;
+    /* color: red; */
+}
+main #section3 .allprojects .flow:hover{
+    cursor: pointer;
+}
+main #section3 .allprojects .flow h6{
+    color: #CCD6F6;
+    font-size: 25px;
+}
+
+main #section3 .allprojects .flow figure img{
+    width: 40px;
+}
+main #section3 .allprojects .flow .allinks a{
+   
+    color: #CCD6F6;
+    text-decoration: none;
+    margin-right: 15px;
+}
+main #section3 .allprojects .flow::before{
+    content: "";
+    width: 0%;
+    height: 100%;
+  
+    position: absolute;
+    z-index: -1;
+    transition: 0.3s linear;
+}
+main #section3 .allprojects .flow:hover::before{
+    width: 100%;
+    /* color: #000; */
+    background-color: #1F1F1F;
+}
+
+
+
+
+
+main #section4{
+    width: 100%;
+    height: 700px;
+    /* background-color: antiquewhite; */
+    padding-left: 100px;
+}
+main #section4 h2{
+    color: #4FCBB0;
+    position: relative;
+    font-size: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+main #section4 .contact{
+    width: 100%;
+    height: 500px;
+    /* background-color: chocolate; */
+    margin-top: 40px;
+    /* gap: 60px; */
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+main #section4 .contact .box11{
+ width: 50%;
+ height: 100%;
+}
+main #section4 .box11 iframe{
+    width: 100%;
+    height: 100%;
+}
+main #section4 .contact form{
+    width: 50%;
+    padding-top: 40px;
+    padding-left: 110px;
+    background-color: #000;
+}
+main #section4 .contact form h5{
+    color: #CCD6F6;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+main #section4 .contact form i{
+    color: #CCD6F6;
+    font-size: 20px;
+    padding: 5px;
+}
+main #section4 .contact form input{
+    width: 400px;
+    font-size: 20px;
+    padding: 10px 0 0 0;
+    margin-bottom: 30px;
+    background-color: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    color: #CCD6F6;
+}
+main #section4 .contact form textarea{
+    background-color: transparent;
+    font-size: 20px;
+    color: #CCD6F6;
+    outline: none;
+    padding: 5px;
+    resize: none;
+}
+::placeholder{
+    color: #CCD6F6;
+}
+
+main #section4 .contact form button{
+  margin-top: 15px;
+  align-items: center;
+  appearance: button;
+  background-color: #0276FF;
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  font-family: "RM Neue",sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  padding: 10px 21px;
+  text-align: center;
+  text-transform: none;
+  transition: color .13s ease-in-out,background .13s ease-in-out,opacity .13s ease-in-out,box-shadow .13s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:active {
+  background-color: #006AE8;
+}
+
+button:hover {
+  background-color: #1C84FF;
+}
+
+footer{
+    width: 100%;
+    height: 50px;
+    /* background-color: #CCD6F6; */
+}
+footer p{
+    text-align: center;
+    font-size: 20px;
+    color: #CCD6F6;
+}
+
 
 
 
