--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     font-family: "Nunito", sans-serif;
 }
 html,body{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-color: #000510;
     padding-left: 5vw;
     padding-right: 5vw;
@@ -73,6 +73,8 @@ header  ul li a:hover::after{
 }
 header  ul #icon{
     display: none;
+    color: #CCD6F6;
+    cursor: pointer;
 }
 main{
     width: 100%;
@@ -185,7 +187,7 @@ main .main-box .img-box img:hover{
 }
 main #section1{
     width: 100%;
-    height: 650px;
+    height: 700px;
     /* background-color: #006AE8; */
     border-bottom: 1px solid #CCD6F6;
 }
@@ -201,9 +203,12 @@ main #section1 .edu{
     height: 500px;
     /* background-color: #233554; */
     display: flex;
+    gap: 25px;
     /* flex-direction: column; */
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
+    overflow: hidden;
+    /* flex-wrap: wrap; */
 }
 main #section1 .edu .ug{
     width: 550px;
@@ -216,7 +221,7 @@ main #section1 .edu .ug{
     flex-wrap: wrap;
 }
 main #section1 .edu .ug figure{
-    width: 60px;
+    width: 50px;
     margin-right: 10px;
 }
 main #section1 .edu .ug figure img{
@@ -263,12 +268,13 @@ main #section1 .edu .pg{
 }
 
 main #section1 .edu .pg figure{
-    width: 75px;
+    width: 65px;
     margin-right: 10px;
 }
 
 main #section1 .edu .pg figure img{
     width: 100%;
+    object-fit: cover;
 }
 
 main #section1 .edu .pg .deg2{
@@ -320,9 +326,9 @@ main #section1 .edu .pg .points li{
 
 main #section2{
     width: 100%;
-    height: 400px;
+    height: 500px;
     /* background-color: antiquewhite; */
-    padding-left: 100px;
+    /* padding-left: 100px; */
     border-bottom: 1px solid #CCD6F6;
 }
 
@@ -335,34 +341,49 @@ main #section2 h2{
 }
 main #section2 .allimg{
     width: 100%;
-    height: 100%;
+    height: 400px;
     /* height: 300px; */
     /* margin-top: 30px; */
-    padding-top: 50px;
+    /* padding-top: 90px; */
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
+    flex-wrap: wrap;
     /* background-color: #006AE8; */
 }
 main #section2 figure{
-    height: 100%;
+    /* height: 60%; */
+   width: 90px;
+   height: 90px;
+   /* height: ; */
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 main #section2 figure img{
     /* width: 100%; */
-    height:22%;
+    /* height:22%; */
+    width: 100%;
     background-color: #fff;
-    padding: 10px;
+    padding: 9px;
     border-radius: 20px;
     transition: 0.5s ease;
+    aspect-ratio: 3/2;
+    object-fit: contain;
+    animation: bm 1.1s infinite alternate-reverse;
 }
-main #section2 figure img:hover{
+/* main #section2 figure img:hover{
    transform: scale(1.1);
+} */
+
+@keyframes bm {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
 }
-
-
 
 
 
@@ -372,7 +393,7 @@ main #section2 figure img:hover{
 main #section3{
  width: 100%;
  height: 700px;
- padding-left: 100px;
+ /* padding-left: 100px; */
  border-bottom: 1px solid #CCD6F6;
 }
 main #section3 h2{
@@ -472,7 +493,11 @@ main #section4{
     width: 100%;
     height: 700px;
     /* background-color: antiquewhite; */
-    padding-left: 100px;
+    /* padding-left: 100px; */
+  
+    /* background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; */
 }
 main #section4 h2{
     color: #4FCBB0;
@@ -486,34 +511,61 @@ main #section4 h2{
 main #section4 .contact{
     width: 100%;
     height: 500px;
-    /* background-color: chocolate; */
+   
     margin-top: 40px;
     /* gap: 60px; */
     display: flex;
     justify-content: center;
+    
+    gap: 10px;
     /* align-items: center; */
 }
 main #section4 .contact .box11{
  width: 50%;
  height: 100%;
+ border-radius: 15px;
+ overflow: hidden;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
-main #section4 .box11 iframe{
-    width: 100%;
-    height: 100%;
+main #section4 .contact .box11 #connect{
+    font-size: 40px;
+    line-height: 70px;
+}
+main #section4 .contact .box11 #connect mark{
+    background-color: red;
+    color: yellow;
+    border-radius: 15px;
+}
+main #section4 .contact .box11 #connect span a{
+    text-decoration: none;
+}
+main #section4 .contact .box11 #connect span a:hover{
+   text-decoration: line-through;
+}
+main #section4 .contact .box11 #connect .insta{
+    color: #f9ce34;
+}
+main #section4 .contact .box11 #connect .linke{
+    color: #0276FF;
 }
 main #section4 .contact form{
     width: 50%;
     padding-top: 40px;
     padding-left: 110px;
-    background-color: #000;
+    backdrop-filter: blur(5px);
+    background-color: #393a4165;
+    overflow: hidden;
+    border-radius: 15px;
 }
 main #section4 .contact form h5{
-    color: #CCD6F6;
+    color: #4FCBB0;
     font-size: 20px;
     margin-bottom: 15px;
 }
 main #section4 .contact form i{
-    color: #CCD6F6;
+    color: #4FCBB0;
     font-size: 20px;
     padding: 5px;
 }
@@ -595,10 +647,12 @@ footer p{
 
 @media (max-width:1400px) {
 
-    main .main-box .name {
-        /* padding-left: 50px; */
+    main #section4 .contact form{
+        padding-left: 30px;
     }
-
+    main #section2 .allimg{
+        height: 300px;
+    }
     
 }
 @media (max-width:1370px) {
@@ -608,13 +662,7 @@ footer p{
 
     } 
 }
-@media (max-width:1370px) {
 
-    main .main-box .name h2{
-        font-size: 21px;
-
-    } 
-}
 @media (max-width:1225px) {
 
     main .main-box .name h1{
@@ -625,12 +673,55 @@ footer p{
         font-size: 20px;
 
     } 
+    main #section1{
+        height: 800px;
+    }
+    main #section1 .edu{
+        width: 100%;
+        height: 700px;
+        /* background-color: #233554; */
+        display: flex;
+        gap: 25px;
+        /* flex-direction: column; */
+        /* justify-content:center;
+        align-items: center; */
+        flex-wrap: wrap;
+    }
+   
+    header ul li{
+            display: none;
+        }
+
+        header .name-box1{
+            /* color: #CCD6F6;
+            cursor: pointer;
+            font-weight: 300; */
+            width: 100%;
+            text-align: center;
+        }
+        main #section2{
+            height: 350px;
+        }
+        main #section2 .allimg{
+            padding-top: 30px;
+            height: 100px;
+        }
+        
+    
 }
+
+
+
+
+
+
+
+
 @media (max-width:1200px) {
 
-    main .main-box .name h1{
+    /* main .main-box .name h1{
         font-size: 40px;
-    }
+    } */
 
     main .main-box .name h2{
         font-size: 19px;
@@ -648,4 +739,161 @@ footer p{
         line-height: 25px;
 
     } 
+    main #section3{
+        height: 600px;
+    }
+   
+    main #section4 .contact form{
+      padding: 15px;
+    }
+    main #section4 {
+        height: 1100px;
+    }
+    main #section4 .contact{
+        /* height: 1000px; */
+        flex-wrap: wrap;
+    }
+    main #section4 .contact form input{
+        width: 30vw;
+    }
+    main #section4 .contact form textarea{
+       width: 35vw;
+    }
+}
+@media (max-width:950px) {
+    main .main-box{
+        height: 700px;
+        flex-wrap: wrap-reverse;
+        text-align: center;
+        justify-content: space-around;
+        align-items: center;
+        padding-left: 0;
+        /* padding-top: 200px; */
+        margin-top: 100px;
+        /* overflow:hidden; */
+    }
+    main .main-box .img-box{
+        height: 300px;
+        padding-top: 30px;
+        
+    }
+    main #section4 {
+        height: 1200px;
+    }
+    main #section4 .contact .box11 #connect{
+        font-size: 4vw;
+    }
+    main #section4 .contact form{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    main #section4 .contact form input{
+        width: 40vw;
+        text-align: center;
+    }
+    main #section4 .contact form textarea{
+       width: 45vw;
+    }
+}
+@media (max-width:700px) {
+    main .main-box{
+        height: 900px;
+    }
+    main .main-box .allInfo .name p{
+        /* line-height: 34px; */
+        margin-bottom: 25px;
+    }
+    main #section3 .allprojects .flow h6{
+        font-size: 19px;
+    }
+    main #section3 .allprojects .flow p{
+        font-size: 19px;
+    }
+    main #section3 .allprojects .flow figure img{
+        width: 30px;
+    }
+    main #section2{
+        height: 500px;
+    }
+    
+}
+@media (max-width:600px){
+    main #section4 {
+        height: 1300px;
+    }
+    main #section4 .contact form input{
+        width: 45vw;
+    }
+    main #section4 .contact form textarea{
+       width: 50vw;
+    }
+    main .main-box .allInfo .name p{
+        margin-bottom: 35px;
+    }
+    main #section3 .allprojects .flow p{
+        font-size: 16px;
+    }
+}
+@media (max-width:500px){
+    main #section2{
+        height: 600px;
+    }
+    main #section3 .allprojects .flow h6{
+        font-size: 15px;
+    }
+    main #section3 .allprojects .flow p{
+        font-size: 13px;
+    }
+    main #section4 .contact .box11 #connect{
+        line-height: 42px;
+        font-size: 28px;
+    }
+    main #section4 .contact form input{
+        width: 50vw;
+    }
+    main #section4 .contact form textarea{
+        width: 50vw;
+     }
+}
+@media (max-width:450px){
+
+    main .main-box{
+        height: 950px;
+    }
+    main #section1{
+        height: 900px;
+    }
+    main #section1 .edu .pg .deg2{
+        font-size: 20px;
+        margin-bottom: 25px;
+        color: #fff;
+        margin-right: 7px;
+        height: 30px;
+    }
+    main .main-box .allInfo .icon{
+        margin-top: 60px;
+    }
+    main #section3 .allprojects .flow h6{
+        font-size: 14px;
+    }
+    main #section3 .allprojects .flow p{
+        font-size: 10px;
+    }
+    main #section4 .contact .box11 #connect{
+        /* line-height: 42px; */
+        font-size: 20px;
+        width: 100%;
+    }
+    main #section4 .contact form{
+        width: 100%;
+    }
+    main #section4 .contact form input{
+        width: 60vw;
+    }
+    main #section4 .contact form textarea{
+        width: 60vw;
+     }
 }
