--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 *{
-    font-family: cursive;
+    /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
 }
 
 html,body{
